# C-First

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
compressor/: CMakeLists.txt
compressor/src/: compressor.cpp
libcompressor/: CMakeLists.txt
libcompressor/include/libcompressor/: libcompressor.hpp
libcompressor/src/: libcompressor.cpp
libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
